--- a/src/components/contacticons/ContactIcons.css
+++ b/src/components/contacticons/ContactIcons.css
@@ -1,10 +1,11 @@
 .icon{
-    position: fixed;
     display: block;
+    position: absolute;
     width: 60px;
     height: 60px;
     margin-bottom: 50px;
     margin-left: 30px;
+    margin-top: 100px;
     transition: all 0.15s;
 }
 .icon:hover{
