--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -23,15 +23,17 @@
     text-align: center;
     font-size: 60px;
     margin-right: 200px;
-    margin-top: 50px;
+    margin-top: 0px;
     margin-bottom: 30px;
     color: rgb(255, 255, 255);
 }
 .main-template{
     display: grid;
     grid-template-columns: 45% 45%;
+    margin-bottom: 300px;
 }
 .skill-icon{
     width: 200px;
     margin-left: 150px;
 }
+
