--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -11,6 +11,7 @@
     font-size: 24px;
     margin-top: 0px;
     color: rgb(126, 126, 126);
+    text-align: justify;
 }
 .about-header {
     text-align: center;
