--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,16 +1,19 @@
 .header{
-    display: flex;
+    display: block;
     position: fixed;
+    background-color: #111d2c;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    width: 100%;
 }
 .menu-button {
-    font-family: 'Cascadia Mono', sans-serif;
     font-size: 25px;
-    color: rgb(197, 206, 212);
+    color: rgb(3, 173, 173);
     background: none;
     padding: 15px;
     padding-left: 15px;
     border-radius: 20px;
-    border-color: rgb(197, 206, 212);
+    border: none;
     margin-right: 20px;
     margin-top: 10px;
     margin-left: 20px;
@@ -18,7 +21,7 @@
     width: 170px;
 }
 .menu-button:hover {
-    background-color: rgb(197, 206, 212);
+    background-color: rgb(3, 173, 173);
     color: rgb(5, 44, 69);
     cursor: pointer;
 }
