--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,7 +1,6 @@
 
 .skill-header{
     text-align: center;
-    font-family: 'Cascadia Mono', sans-serif;
     font-size: 30px;
     margin-top: 0px;
     margin-bottom: 30px;
@@ -12,6 +11,7 @@
     font-size: 20px;
     margin-top: 0px;
     color: rgb(167, 167, 167);
+    text-align: justify;
 }
 .skill-div{
     margin: 30px;
@@ -34,6 +34,6 @@
 }
 .skill-icon{
     width: 200px;
-    margin-left: 150px;
+    margin-left: 35%;
 }
 
